--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ipstack/finder",
-  "version": "1.0.0",
-  "time": "2018-01-14",
+  "version": "2.0.0",
+  "time": "2018-01-20 05:07:32",
   "type": "library",
   "description": "Define data by IP Address",
   "keywords": ["iptool", "ipstack", "ipstack-finder", "ip", "geo", "geoip", "info", "data", "ip-database", "search", "ip-search"],
@@ -18,8 +18,6 @@
   },
   "suggest": {
     "ipstack/wizard": "Need for create your database",
-    "ipstack/db-v1-geolite2-country-en": "If you hate use country geobase of MaxMind (GeoLite2 Country EN)",
-    "ipstack/db-v1-geolite2-city-en": "If you hate use city geobase of MaxMind (GeoLite2 City EN)"
   },
   "autoload": {
     "psr-4": {
