--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "name": "ipstack/finder",
-  "version": "1.1.0",
+  "version": "2.0.0",
+  "time": "2018-01-20 05:17:54",
   "type": "library",
   "description": "Define data by IP Address",
   "keywords": ["iptool", "ipstack", "ipstack-finder", "ip", "geo", "geoip", "info", "data", "ip-database", "search", "ip-search"],
