--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
   "name": "ipstack/finder",
-  "version": "2.0.0",
-  "time": "2018-01-20 05:17:54",
+  "version": "2.0.0-beta",
   "type": "library",
   "description": "Define data by IP Address",
   "keywords": ["iptool", "ipstack", "ipstack-finder", "ip", "geo", "geoip", "info", "data", "ip-database", "search", "ip-search"],
@@ -14,7 +13,8 @@
     }
   ],
   "require": {
-    "php":">=5.3"
+    "php": ">=5.3",
+    "ddrv/extra-pack": "*"
   },
   "suggest": {
     "ipstack/wizard:~2": "Need for create your database"
